name for link page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Home</a> &nbsp;
             <a href="Yurts.html">Yurts</a> &nbsp;
-            <a href="Activities.html">Activities</a> &nbsp;
+            <a href="activities.html">Activities</a> &nbsp;
             <a href="Reservations.html">Reservations</a> &nbsp;
         </nav>
         <div id="homehero"></div>
