--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="index.html">Home</a> &nbsp;
             <a href="Yurts.html">Yurts</a> &nbsp;
             <a href="activities.html">Activities</a> &nbsp;
-            <a href="Reservations.html">Reservations</a> &nbsp;
+            <a href="reservations.html">Reservations</a> &nbsp;
         </nav>
         <div id="homehero"></div>
         <main>
