--- a/Yurts.html
+++ b/Yurts.html
@@ -15,8 +15,8 @@
         <nav>
             <a href="index.html">Home</a> &nbsp;
             <a href="Yurts.html">Yurts</a> &nbsp;
-            <a href="Activities.html">Activities</a> &nbsp;
-            <a href="Reservations.html">Reservations</a> &nbsp;
+            <a href="activities.html">Activities</a> &nbsp;
+            <a href="reservations.html">Reservations</a> &nbsp;
         </nav>
         <div id="yurthero"></div>
         <main>
