--- a/ch7pacific/activities.html
+++ b/ch7pacific/activities.html
@@ -13,16 +13,10 @@
             <h1>Pacific Trails Resort</h1>
         </header>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a>
-                </li>
-                <li><a href="Yurts.html">Yurts</a>
-                </li>
-                <li><a href="activities.html">Activities</a>
-                </li>
-                <li><a href="Reservations.html">Reservations</a>
-                </li>
-            </ul>
+            <a href="index.html">Home</a> &nbsp;
+            <a href="Yurts.html">Yurts</a> &nbsp;
+            <a href="activities.html">Activities</a> &nbsp;
+            <a href="Reservations.html">Reservations</a> &nbsp;
         </nav>
         <div id="trailhero"></div>
         <main>
