--- a/ch7pacific/index.html
+++ b/ch7pacific/index.html
@@ -13,16 +13,10 @@
             <h1>Pacific Trails Resort</h1>
         </header>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a>
-                </li>
-                <li><a href="Yurts.html">Yurts</a>
-                </li>
-                <li><a href="activities.html">Activities</a>
-                </li>
-                <li><a href="reservations.html">Reservations</a>
-                </li>
-            </ul>
+            <a href="index.html">Home</a> &nbsp;
+            <a href="Yurts.html">Yurts</a> &nbsp;
+            <a href="activities.html">Activities</a> &nbsp;
+            <a href="reservations.html">Reservations</a> &nbsp;
         </nav>
         <div id="homehero"></div>
         <main>
@@ -50,7 +44,7 @@
             <br>
             <a href="mailto:josh@hight.com">josh@hight.com</a>
         </footer>
-    </div>
+            </div>
 </body>
 
 </html>
