--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>Pacific Trails Resort</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <!--[if 1t IE 9]>
+<script scr="http://html5shim.googlecode.com/svn/trunk/html5.js">
+</script>
+<![endif]-->
+    
 </head>
 
 <body>
@@ -35,14 +41,13 @@
                 <li>Heated outdoor pool and whirlpool</li>
                 <li>Guided hiking tours of the redwoods</li>
             </ul>
-            <br>
-            <span class="resort"> Pacific Trails Resort </span>
-            <br>
             <div id="contact">
-                12010 Pacific Trails Road
+            <span class="resort"> Pacific Trails Resort </span>
+                <br>12010 Pacific Trails Road
                 <br> Zephyr, CA 95555
                 <br>
-                <br> 888-555-5555
+                <br> <a id="mobile" href="tel:888-555-5555"></a>
+                <span id="desktop">888-555-5555</span>
             </div>
         </main>
         <footer>
