--- a/Yurts.html
+++ b/Yurts.html
@@ -5,7 +5,7 @@
     <title>Pacific Trails Resort</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if 1t IE 9]>
 <script scr="http://html5shim.googlecode.com/svn/trunk/html5.js">
 </script>
