--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <br>12010 Pacific Trails Road
                 <br> Zephyr, CA 95555
                 <br>
-                <br> <a id="mobile" href="tel:888-555-5555"></a>
+                <br> <a id="mobile" href="tel:888-555-5555">888-555-5555</a>
                 <span id="desktop">888-555-5555</span>
             </div>
         </main>
