--- a/Yurts.html
+++ b/Yurts.html
@@ -5,7 +5,7 @@
     <title>Pacific Trails Resort</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if 1t IE 9]>
 <script scr="http://html5shim.googlecode.com/svn/trunk/html5.js">
 </script>
@@ -41,7 +41,38 @@
             <h3>What should I bring?</h3>
             <p>Bring a sense of adventure and some time to relax! Most guests also pack comfortable walking shoes and plan to dress for changing weather with layers of clothing.</p>
 
+            <br>
+            <h3>Yurts Packages</h3>
+            <p>A variety of luxury yurt packages are available. Choose a package below and contact us to begin your reservation. We're happy to build a custom package just for you!</p>
+
+            <table>
+                <tr>
+                    <th>Package Name</th>
+                    <th>Description</th>
+                    <th>Nights</th>
+                    <th>Cost per Person</th>
+                </tr>
+                <tr>
+                    <td>Weekend Escape</td>
+                    <td class="text">Two breakfasts, a trail map, and a picnic snack</td>
+                    <td>2</td>
+                    <td>$450</td>
+                </tr>
+                <tr>
+                    <td>Zen Retreat</td>
+                    <td class="text">Four breakfasts, a trail map, a picnic snack, and a pass for the daily sunrise Yoga session</td>
+                    <td>4</td>
+                    <td>$600</td>
+                </tr>
+                <tr>
+                    <td>Kayak Away</td>
+                    <td class="text">Two breakfasts, two hours of kayak rental daily, and a trail map</td>
+                    <td>2</td>
+                    <td>$500</td>
+                </tr>
+            </table>
         </main>
+
         <footer>
             Copyright &copy; 2016 Pacific Trails Resort
             <br>
