--- a/activities.html
+++ b/activities.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pacific Trails Resort is a getaway vacation experience with many outdoor activities available.">
     <!--[if 1t IE 9]>
 <script scr="http://html5shim.googlecode.com/svn/trunk/html5.js">
 </script>
@@ -40,6 +41,40 @@
 
             <h3>Bird Watching</h3>
             <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
+
+            <div id="gallery">
+                <figure>
+                    <img src="images/photo2.jpg" width="200" height="150" alt="Stock photo of forest and beach">
+                </figure>
+
+                <ul>
+                    <li>
+                        <a href="images/photo2.jpg"><img src="images/photo2thumb.jpg" width="100" height="75" alt="A beach with rocks near it">
+                            <span><img src="images/photo2.jpg" width="200" height="150" alt="A beach with rocks near it"><br>A beach with rocks near it</span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="images/photo3.jpg"><img src="images/photo3thumb.jpg" width="100" height="75" alt="Sky view of forest meeting ocean">
+                            <span><img src="images/photo3.jpg" width="200" height="150" alt="Sky view of forest meeting ocean"><br>Sky view of forest meeting ocean</span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="images/photo4.jpg"><img src="images/photo4thumb.jpg" width="100" height="75" alt="Another beach with rocks near it">
+                            <span><img src="images/photo4.jpg" width="200" height="150" alt="Another beach with rocks near it"><br>Another beach with rocks near it</span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="images/photo6.jpg"><img src="images/photo6thumb.jpg" width="100" height="75" alt="A sunset at the beach">
+                            <span><img src="images/photo6.jpg" width="200" height="150" alt="A sunset at the beach"><br>A sunset at the beach</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
 
         </main>
         <footer>
