--- a/Yurts.html
+++ b/Yurts.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pacific Trails Resort is a getaway vacation experience with many outdoor activities available.">
     <!--[if 1t IE 9]>
 <script scr="http://html5shim.googlecode.com/svn/trunk/html5.js">
 </script>
@@ -41,7 +42,6 @@
             <h3>What should I bring?</h3>
             <p>Bring a sense of adventure and some time to relax! Most guests also pack comfortable walking shoes and plan to dress for changing weather with layers of clothing.</p>
 
-            <br>
             <h3>Yurts Packages</h3>
             <p>A variety of luxury yurt packages are available. Choose a package below and contact us to begin your reservation. We're happy to build a custom package just for you!</p>
 
