--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pacific Trails Resort is a getaway vacation experience with many outdoor activities available.">
     <!--[if 1t IE 9]>
 <script scr="http://html5shim.googlecode.com/svn/trunk/html5.js">
 </script>
@@ -33,6 +34,13 @@
         <div id="homehero"></div>
         <main>
             <h2> Enjoy Nature in Luxury </h2>
+
+            <video controls="controls" width="320" height="240" poster="media/pacifictrailsresort.jpg">
+                <source src="media/PacificTrailsResort.mp4" type="video/mp4">
+                    <source src="media/PacificTrailsResort.ogv" type="video/ogg">
+                        <embed type="application/x-shockwave-flash" src="media/pacifictrailsresort.swf" width="320" height="240">
+            </video>
+
             <p> <span class="resort">Pacific Trails Resort </span> offers a special lodging experience on the California North Coast. Relax in serenity with panoramic views of the Pacific Ocean.</p>
             <ul>
                 <li>Private yurts with decks overlooking the ocean</li>
