--- a/activities.html
+++ b/activities.html
@@ -26,7 +26,7 @@
                 </li>
                 <li><a href="activities.html">Activities</a>
                 </li>
-                <li><a href="Reservations.html">Reservations</a>
+                <li><a href="reservations.html">Reservations</a>
                 </li>
             </ul>
         </nav>
