--- a/activities.html
+++ b/activities.html
@@ -42,7 +42,7 @@
             <h3>Bird Watching</h3>
             <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
 
-            <div id="gallery">
+         <div id="gallery">
                 <figure>
                     <img src="images/photo2.jpg" width="200" height="150" alt="Stock photo of forest and beach">
                 </figure>
@@ -50,19 +50,19 @@
                 <ul>
                     <li>
                         <a href="images/photo2.jpg"><img src="images/photo2thumb.jpg" width="100" height="75" alt="A beach with rocks near it">
-                            <span><img src="images/photo2.jpg" width="200" height="150" alt="A beach with rocks near it"><br>A beach with rocks near it</span>
+                            <span><img src="images/photo2.jpg" width="200" height="150" alt="A beach with rocks near it"><br>beach</span>
                         </a>
                     </li>
 
                     <li>
                         <a href="images/photo3.jpg"><img src="images/photo3thumb.jpg" width="100" height="75" alt="Sky view of forest meeting ocean">
-                            <span><img src="images/photo3.jpg" width="200" height="150" alt="Sky view of forest meeting ocean"><br>Sky view of forest meeting ocean</span>
+                            <span><img src="images/photo3.jpg" width="200" height="150" alt="Sky view of forest meeting ocean"><br>ocean</span>
                         </a>
                     </li>
 
                     <li>
                         <a href="images/photo4.jpg"><img src="images/photo4thumb.jpg" width="100" height="75" alt="Another beach with rocks near it">
-                            <span><img src="images/photo4.jpg" width="200" height="150" alt="Another beach with rocks near it"><br>Another beach with rocks near it</span>
+                            <span><img src="images/photo4.jpg" width="200" height="150" alt="Another beach with rocks near it"><br>beach 2</span>
                         </a>
                     </li>
 
