--- a/reservations.html
+++ b/reservations.html
@@ -24,7 +24,7 @@
             <ul>
                 <li><a href="index.html">Home</a>
                 </li>
-                <li><a href="yurts.html">Yurts</a>
+                <li><a href="Yurts.html">Yurts</a>
                 </li>
                 <li><a href="activities.html">Activities</a>
                 </li>
